finished password reset

--- a/templates/users/verify_otp.html
+++ b/templates/users/verify_otp.html
@@ -3,4 +3,4 @@
   This is Your One Time Password <strong>{{code}}</strong>, Thanks<br />
 </p>
 
-<p style="color: red">Good Day</p>
+<p style="color: red">StockPay</p>
