--- a/templates/transactions/verified_withdrawal.html
+++ b/templates/transactions/verified_withdrawal.html
@@ -1,7 +1,22 @@
-<p>
-  Hello.. {{name}} {{withdrawal.amount}}. <br />
+{% extends '../base.html' %}
+
+{% block content %}
+
+<h2 style="text-align: left;
+                               align-items: center;">
+                        New Withdrawal Verified
+
+                    </h2>
+
+<p class="data"
+                       style="text-align: justify-all;
+                              align-items: center;
+                              font-size: 15px;
+                              padding-bottom: 12px;">
+                      Hello.. {{name}} {{withdrawal.amount}}. <br />
   This is an <strong>important</strong> {{ message }} <br />
   <b> By Admin.</b>
-</p>
+                    </p>
 
-<p style="color: red">Good Day</p>
+{% endblock %}
+```
