--- a/templates/users/verify_otp.html
+++ b/templates/users/verify_otp.html
@@ -1,6 +1,22 @@
-<p>
-  Hello.. {{name}} <br />
-  This is Your One Time Password <strong>{{code}}</strong>, Thanks<br />
-</p>
+{% extends '../base.html' %}
 
-<p style="color: red">StockPay</p>
+{% block content %}
+<h2 style="text-align: left;
+                               align-items: center;">
+                        Verify OTP
+
+                   </h2>
+
+
+                    <p class="data"
+                       style="text-align: justify-all;
+                              align-items: center;
+                              font-size: 15px;
+                              padding-bottom: 12px;">
+                        Hello.. {{name}} <br />
+  This is Your One Time Password <strong>{{code}}</strong>, Thanks<br />
+                    </p>
+
+
+{% endblock %}
+
