try catch email

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                         <tbody>
                             <tr>
                                 <td align="center" style="background-color: #E1AE3C;
-                                           height: 50px;">
+                                           height: 50px; width: 100%;">
 
                                     <a href="#" style="text-decoration: none;">
                                         <p style="color:white;
@@ -60,7 +60,7 @@
                 </td>
             </tr>
             <tr style="border: none;
-            background-color: #4cb96b;
+            background-color: ##E1AE3C;
             height: 40px;
             color:white;
             padding-bottom: 20px;
@@ -69,7 +69,7 @@
 <td height="40px" align="center">
     <p style="color:white;
     line-height: 1.5em;">
-    GeeksforGeeks
+    StockPay
     </p>
     <a href="#"
     style="border:none;
