--- a/templates/transactions/verified_deposit.html
+++ b/templates/transactions/verified_deposit.html
@@ -14,8 +14,9 @@
                               align-items: center;
                               font-size: 15px;
                               padding-bottom: 12px;">
-                         Hello.. {{name}} {{deposit.amount}}. <br />
-  This is an <strong>important</strong> {{ message }} <br />
+                         Hello.. {{name}}, Your deposit of  <strong>${{deposit.amount}}</strong>  <br /> has just been verified.
+                        <br /> Thank you for choosing us. <br />
+
   <b> By Admin.</b>
                     </p>
 
