--- a/templates/users/new_pin.html
+++ b/templates/users/new_pin.html
@@ -14,7 +14,7 @@
                               font-size: 15px;
                               padding-bottom: 12px;">
                        Hello.. {{name}} <br />
-  This is Your New Transaction Pin <strong>{{code}}</strong>, Thanks<br />
+  This is Your New Transaction Pin <strong>{{code}}</strong>, <br /> Thank You for choosing us.<br />
                     </p>
 
 {% endblock %}
