--- a/templates/transactions/verified_withdrawal.html
+++ b/templates/transactions/verified_withdrawal.html
@@ -13,8 +13,8 @@
                               align-items: center;
                               font-size: 15px;
                               padding-bottom: 12px;">
-                      Hello.. {{name}} {{withdrawal.amount}}. <br />
-  This is an <strong>important</strong> {{ message }} <br />
+                    Hello.. {{name}}, Your deposit of  <strong>${{withdrawal.amount}}</strong>  <br /> has just been verified.
+                        <br /> Thank you for choosing us. <br />
   <b> By Admin.</b>
                     </p>
 
