--- a/templates/users/verify_otp.html
+++ b/templates/users/verify_otp.html
@@ -14,7 +14,7 @@
                               font-size: 15px;
                               padding-bottom: 12px;">
                         Hello.. {{name}} <br />
-  This is Your One Time Password <strong>{{code}}</strong>, Thanks<br />
+  This is Your One Time Password <strong>{{code}}</strong>, <br /> Thank You for choosing us.<br />
                     </p>
 
 
