--- a/templates/base.html
+++ b/templates/base.html
@@ -17,11 +17,12 @@
                         <tbody>
                             <tr>
                                 <td align="center" style="background-color: #E1AE3C;
-                                           height: 50px; width: 100%;">
+                                           height: 50px; width: 100%; ">
 
                                     <a href="#" style="text-decoration: none;">
                                         <p style="color:white;
-                                                  font-weight:bold;">
+                                                  font-weight:bold;
+                                                  font-size: 40px;">
                                             StockPay
                                         </p>
                                     </a>
@@ -31,16 +32,16 @@
                     </table>
                 </td>
             </tr>
-            <tr style="height: 300px;">
+            <tr style="height: 100px;">
                 <td align="center" style="border: none;
                            border-bottom: 2px solid #E1AE3C;
                            padding-right: 20px;padding-left:20px">
 
-                    <p style="font-weight: bolder;font-size: 42px;
+                    <p style="font-weight: bolder;font-size: 24px;
                               letter-spacing: 0.025em;
                               color:black;">
                         Welcome To Stockpay!
-                        <br> Your No. 1 place to Invest in Socks
+                        <br> Your No. 1 place to Invest in Stocks
                     </p>
                 </td>
             </tr>
@@ -60,7 +61,7 @@
                 </td>
             </tr>
             <tr style="border: none;
-            background-color: ##E1AE3C;
+            background-color: #E1AE3C;
             height: 40px;
             color:white;
             padding-bottom: 20px;
